# jdmn

./: .gitignore  .gs-project.yml  .travis.yml  AGENTS.md  BUILD.md  CHANGE_LOG.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  NOTICE.txt  README.md  build.sh  pom.xml
dco/: anatoliy_o.dco  camunda-falko_menge.dco  cerebral-armins_stepanjans.dco  cerebral-vincenzo_incutti.dco  goldman_sachs-octavian_patrascoiu.dco  shitanshu_pandey.dco
dmn-aggregate/: pom.xml
dmn-core/: NOTICE.txt  default-fields.txt  pom.xml
dmn-jpa-integration-tests/: pom.xml
dmn-jpa-it/: NOTICE.txt  pom.xml
dmn-maven-plugin/: NOTICE.txt  pom.xml
dmn-performance/: pom.xml  run-performance.bat  run-test-execution-performance.bat
dmn-reladomo-integration-tests/: NOTICE.txt  pom.xml
dmn-runtime/: pom.xml
dmn-runtime-api/: pom.xml
dmn-signavio/: pom.xml
dmn-signavio-integration-tests/: pom.xml
dmn-signavio-it/: pom.xml
dmn-tck-integration-tests/: pom.xml
dmn-tck-it/: NOTICE.txt  pom.xml
dmn-tck-it/dmn-tck-it-python-translator/: README.md  ci_build.bat  ci_build.sh  pom.xml  pyproject.toml  requirements.testing.txt  requirements.txt  tox.ini
dmn-tck-it/dmn-tck-it-python-translator/ci/: ci_requirements.txt  make_env.bat  make_env.sh
dmn-tck-it/dmn-tck-it-python-translator/src/: scripts.py
dmn-tck-it/dmn-tck-it-python-translator/tests/cl3_0004_lending_singleton/: Singleton_0004LendingTest.py
docs/: Toulouse.pptx  getting-started.md  index.md  jDMN - DecisionCamp 2018.pptx  jDMN - DecisionCamp 2024.pptx  jDMN - DecisionCamp 2025.pptx  jDMN - Models 2023.pptx  jDMN.pptx  releasing.md  (+1 more)
(+7711 files in other folders)
