[tool.pytest.ini_options]
pythonpath = [
    "target/generated-sources/dmn"
]
testpaths = [
    "target/generated-test-sources/tck", "tests"
]
norecursedirs = ".git .* *.egg* docs dist build"
python_files = "*Test.py"
python_functions = "check*"

log_level = "ERROR"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 2.0.0",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

